# wysprflow

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: install-macos.md  landing-page.md  providers.md  release.md  roadmap.md  setup.md  troubleshooting.md
scripts/: package-macos-release.sh
src/: index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  hud.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_context.rs  commands.rs  lib.rs  main.rs  startup.rs
src-tauri/src/audio/: capture.rs  mod.rs
src-tauri/src/ax/: mod.rs  permissions.rs
src-tauri/src/db/: mod.rs
src-tauri/src/dictionary/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/hotkey/: fn_key.rs  mod.rs
src-tauri/src/hud/: mod.rs
src-tauri/src/llm/: anthropic.rs  mod.rs  openrouter.rs
src-tauri/src/pipeline/: mod.rs
src-tauri/src/settings/: keychain.rs  mod.rs
src-tauri/src/snippets/: mod.rs
src-tauri/src/stt/: deepgram.rs  mod.rs
src-tauri/src/vad/: mod.rs
src/components/: ApiKeysSection.tsx  AppErrorBoundary.tsx  DictionarySection.tsx  GeneralSettingsSections.tsx  HistorySection.tsx  HotkeySection.tsx  HudPill.tsx  SettingsCard.tsx  SnippetsSection.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx  sonner.tsx  switch.tsx  tabs.tsx  textarea.tsx
src/lib/: store.ts  tauri.ts
src/routes/: Hud.tsx  Settings.tsx  Setup.tsx
